Pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: 2048-game
  namespace: 2048
spec:
  containers:
    - name: 2048-game
      image: mradulsingh25/2048-game:latest
      ports:
        - containerPort: 80
