deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-deployment
  labels:
    app: game-app
  namespace: gamespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game-app
  template:
    metadata:
      labels:
        app: game-app
    spec:
      containers:
      - name: game-app
        image: mradulsingh25/2048-game
        ports:
        - containerPort: 6000
