services.yaml
apiVersion: v1
kind: Service
metadata:
  name: 2048-service
  namespace: 2048

spec:
  type: NodePort
  selector:
    app: 2048-game

  ports:
    - port: 80
      targetPort: 80
      nodePort: 30015
      protocol: TCP
