services.yml
apiVersion: v1
kind: Service
metadata:
  name: game-service
  namespace: gamespace

spec:
  selector:
    # Selector for Pods
    app: game-app
  ports:
    # Port Map
  - port: 3000
    targetPort: 3000
    protocol: TCP
  type: LoadBalancer
