ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-ingress
  namespace: gamespace
spec:
  rules:
  - host: "mradulsingh2048.com"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: game-service
              port:
                number: 6000
